updated plotting scripts

--- a/analysis/scripts/plot_background.ipynb
+++ b/analysis/scripts/plot_background.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -283,20 +283,40 @@
        "[51531 rows x 13 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filename = \"mdom_radioactivity_0.dat\"\n",
+    "filename = \"mdom_radioactivity_all.dat\"\n",
     "sensor_directory = \"mDOM\"\n",
-    "output_directory = \"../files/output/\"\n",
+    "output_directory = \"../files/output_geant4/\"\n",
     "path = output_directory + \"background/\" + filename\n",
     "\n",
     "data = pd.read_csv(path, sep = \"\\t\", header = None)\n",
     "data.columns = [\"Event ID\", \"Time [ns]\", \"Energy [eV]\", \"PMT ID\", \"HIT POS X [m]\", \"HIT POS Y [m]\", \"HIT POS Z [m]\", \"VER POS X [m]\", \"VER POS Y [m]\", \"VER POS Z [m]\", \"?\", \"?\", \"?\"]\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(178.5)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.iloc[:,-2].sum()/60"
    ]
   },
   {
